Version 1.10.3+svn:
 * Campaigns:
   * Son of the Black Eye:
     * Fixed bug #19686: fixed two variable checks that prevented some strings
       from being displayed in Back Home
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Galician, Greek, Japanese,
     Ukrainian
 * Miscellaneous and bug fixes:
   * Fix bug #19753, missing hex transition

Version 1.10.3:
 * Campaigns:
   * Heir to the Throne:
     * Fixed bug #19531: scroll to reinforcement units in Blackwater Port
     * Fixed bug #19517: The injured sergeant in HttT: Cliffs of Thoria will now
       always become visible when he is discovered.
   * Under the Burning Suns:
     * Made it so that all units are rehydrated quietly upon victory in scenario
       two
   * Under the Burning Suns:
     * Fix bug #19630: unit lost when Nym returns
     * Dust Devil no longer comments on cuttlefish
     * Wolf Riders now utter fleeing message on easy in scenario 3
 * Editor:
   * Improved performance of the Editor Settings ToD lighting controls
 * Language and i18n:
   * Fixed untranslatable Cancel button label in the add-ons server network
     status dialog (bug #19659)
   * Updated translations: Chinese (Simplified), Finnish, French, Galician,
     Irish, Italian, Korean, Latin, Old English, Portuguese (Brazil), Russian
 * Multiplayer:
   * A New Land:
     * Made it so that the "Elvish Shaman" option in the elvish unit selection
       menu gets translated. Fixes bug #19677.
 * User interface:
   * Stop showing a unit's potential moves before moving in a move & attack,
     rather than after (more consistent with regular movement)
 * Whiteboard:
   * Fixed bug #19613: Multiple attacks after planning attacks in whiteboard
   * Fixed bug #19619: In local games, units keep ghosted appearance during
     opponent's turn
   * Fixed bug #19618: Problems with ending turn with impossible moves
   * Fixed bug #19615: Can see part of opponents' planned moves in local
     multiplayer game