@@ -8,6 +8,7 @@ Version 1.10.3+svn:
      Ukrainian
  * Miscellaneous and bug fixes:
    * Fix bug #19753, missing hex transition
+   * Fixed: Allow strict compilation with CMake using the upcoming gcc-4.8.
 
 Version 1.10.3:
  * Campaigns:
